margin, gap, padding issues fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
     color: #434455;
 }
 
-p, h1, h2 h3 {
+h1, h2, h3, h4, h5, h6, p {
     margin: 0;
 }
 
@@ -112,6 +112,7 @@ img {
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.32px;
+    text-decoration: none;
 
 }
 
@@ -257,10 +258,7 @@ img {
 }
 
 .team-member {
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    gap: 8px;
     padding: 32px 0;
 }
 
@@ -288,7 +286,6 @@ img {
     font-weight: 400;
     line-height: 24px;
     letter-spacing: 0.32px;
-    padding-bottom: 32px;
 }
 
 
@@ -336,7 +333,6 @@ img {
     font-weight: 400;
     line-height: 24px;
     letter-spacing: 0.32px;
-    padding-bottom: 32px;
 }
 
 
